# kredis

./: Cargo.toml  readme.md
radis_impl/: Cargo.toml
radis_impl/src/: lib.rs  plaintext.rs
radis_impl/src/reader/: plaintext.rs
radis_impl/src/storage/: hashmap.rs
radis_lib/: Cargo.toml
radis_lib/src/: io.rs  storage.rs
src/: main.rs
