[package]
name = "kredis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["radis_impl", "radis_lib"]

[dependencies]
env_logger = "0.10.0"
log = "0.4.20"
radis_impl = { version = "0.1.0", path = "radis_impl" }
radis_lib = { version = "0.1.0", path = "radis_lib" }
